--- a/whatwasdeadwasneverdead.html
+++ b/whatwasdeadwasneverdead.html
@@ -38,20 +38,21 @@
 
         <nav class='navbar'>
 
-            <a href='index.html'>
-                <img width="40px" src="images/neec nonso logo.png" class='App-logo' alt='logo' />
-            </a>
+    <a class="logo-link" href='index.html'>
+        <img src="images/neec nonso logo.png" class='App-logo' alt='logo' />
+    </a>
 
             <ul class='nav-list'>
 
                 <li class='list-item'>
                     <a href='bio.html'> bio</a>
                 </li>
-                <li class='list-item'>
-                    <a href='exhibition.html'>exhibition </a>
-                </li>
+
                 <li class='list-item'>
                     <a href='projects.html'>projects </a>
+                </li>
+                <li class='list-item'>
+                    <a href='exhibition.html'>exhibitions </a>
                 </li>
                 <li class='list-item'>
                     <a href='contact.html'>contact </a>
