--- a/contact.html
+++ b/contact.html
@@ -101,11 +101,7 @@
         <div class="contact-main">
 
             <div class="contact">
-
-
-
                 <p>
-
                     contact<br> <br>
                     neec nonso<br>
                     lagos,<br> nigeria<br> <br>
@@ -116,17 +112,10 @@
                         +2348081117654
                     </a>
                 </p>
-
-                <p>
-
-
-                </p>
                 <p>gallery</p>
-                <p  class="email-contact">rele gallery</p>
-
+                <p class="email-contact">rele gallery</p>
                 <p>32 thompson avenue ikoyi, <br>lagos, <br> nigeria.</p>
-                <p></p>
-                <p  class="email-contact">www.rele.co</p>
+                <p class="email-contact">www.rele.co</p>
 
             </div>
 
@@ -233,9 +222,9 @@
             }
         });
 
-        tl.from(".contact-main", { x: 200, opacity: 0, duration: 1.5 })
-            .from(".image-div", { x: -200, opacity: 0, duration: 1.5 })
-            .from(".extra", { x: 200, opacity: 0, duration: 1.5 })
+        //  tl.from(".contact-main", { x: 200, opacity: 0, duration: 1.5 })
+        //     .from(".image-div", { x: -200, opacity: 0, duration: 1.5 })
+        tl.from(".extra", { x: 200, opacity: 0, duration: 1.5 })
             .from(".copyright", { y: 10, opacity: 0, duration: 1.5 })
        //     .from(".designer", { y: 10, opacity: 0, duration: 1.5 });
 
