--- a/theboysfraternity.html
+++ b/theboysfraternity.html
@@ -274,7 +274,7 @@
 
         let tl = gsap.timeline({
             scrollTrigger: {
-                trigger: ".main-exhibition",
+                trigger: ".boy-fraternity-title",
 
 
                 //   markers: true,
