--- a/projects.html
+++ b/projects.html
@@ -169,7 +169,7 @@
         </div>
 
         <div class="card">
-            <a href="howtophotographylagos.html">
+            <a href="howtophotographylagostwo.html">
                 <img class="card-image" src="images/howtophotographylagos/350px Mobile/neec.nonso - 16.webp"
                     alt="projects-image">
             </a>
