--- a/exhibition.html
+++ b/exhibition.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> exhibition | neec nonso | Documentary Photographer</title>
+    <title> exhibition | neec nonso | visual artist</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -98,8 +98,8 @@
             <p class="exhibition-year">2022</p>
 
             <div>
-                <p class="exhibition-title">wa na wari</p>
-                <p>wa na wari</p>
+                <p class="exhibition-title">wa na wari <br>
+              wa na wari</p>
                 <p class="exhibition-venue">art space</p>
                 <p class="exhibition-location">seatle,usa</p>
                 <hr color="#800020">
