--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> homepage | neec nonso | Documentary Photographer</title>
+    <title> homepage | neec nonso | visual artist</title>
     <meta name="description" content=" 150 words">
     <meta name="keywords" content="">
     <meta name="robots" content="index, follow">
@@ -109,7 +109,7 @@
 
     <main class="index-main">
         <div class="landing-page mobile">
-            <img src="images/the boys fraternity/8.webp" alt="homepage-image-mobile">
+          <a href="projects.html"><img src="images/the boys fraternity/8.webp" alt="homepage-image-mobile"></a>
         </div>
 
         <div class="landing-page">
