--- a/whatwasdeadwasneverdead.html
+++ b/whatwasdeadwasneverdead.html
@@ -5,17 +5,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> what was dead was never dead | Neec Nonso | Documentary Photographer</title>
-    <meta name="description" content=" 150 words">
-    <meta name="keywords" content="">
+
+    <!-- Title -->
+    <title> what was dead was never dead | neec nonso | visual artist</title>
+
+    <!-- Description -->
+
+    <meta name="description" content="">
+    <meta name="keywords" content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
     <meta name="robots" content="index, follow">
 
     <!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
+    
     <meta property="og:title" content="Neec Nonso | Documentary Photographer">
     <meta property="og:description" content="Site Content short description">
-    <meta property="og:image" content="http://example.com/thumbnail.jpg">
+    <meta property="og:image" content="images/png4.png">
     <meta property="og:url" content="http://neecnonso.com">
     <meta name="twitter:card" content="summary_large_image">
+
+    <!-- Favicon -->
 
     <link rel="shortcut icon" type="image/png" href="images/neec nonso logo.png">
 
@@ -38,9 +46,9 @@
 
         <nav class='navbar'>
 
-    <a class="logo-link" href='index.html'>
-        <img src="images/neec nonso logo.png" class='App-logo' alt='logo' />
-    </a>
+            <a class="logo-link" href='index.html'>
+                <img src="images/neec nonso logo.png" class='App-logo' alt='logo' />
+            </a>
 
             <ul class='nav-list'>
 
