--- a/page-not-found.html
+++ b/page-not-found.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> page not found | neec nonso | Documentary Photographer</title>
+    <title> page not found | neec nonso | visual artist</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
