--- a/theanotherbeginning.html
+++ b/theanotherbeginning.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> the another begining | neec nonso | documentary photographer</title>
+    <title> the another begining | neec nonso | visual artist</title>
     <meta name="description" content=" 150 words">
     <meta name="keywords" content="">
     <meta name="robots" content="index, follow">
