--- a/waitingforchineke.html
+++ b/waitingforchineke.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> waiting for chineke | Neec Nonso | Documentary Photographer</title>
+    <title> waiting for chineke | Neec Nonso | visual artist</title>
     <meta name="description" content=" 150 words">
     <meta name="keywords" content="">
     <meta name="robots" content="index, follow">
