--- a/whatwasdeadwasneverdead.html
+++ b/whatwasdeadwasneverdead.html
@@ -10,18 +10,22 @@
     <title> what was dead was never dead | neec nonso | visual artist</title>
 
     <!-- Description -->
-
-    <meta name="description" content="">
-    <meta name="keywords" content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
+    <meta name="author" content="www.pixelsinframe.com">
+    <meta name="description" content="neec nonso is a nigerian visual artist">
+    <meta name="keywords"
+        content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
     <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="g87Q6hOwJZZ1Yxe63hb3_rBTowrGJAiuULnUolmTzL4" />
 
     <!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
-    
-    <meta property="og:title" content="Neec Nonso | Documentary Photographer">
-    <meta property="og:description" content="Site Content short description">
-    <meta property="og:image" content="images/png4.png">
+
+    <meta property="og:title" content=" neec nonso | visual artist">
+    <meta property="og:description" content="neec nonso is a nigerian visual artist">
+    <meta property="og:image" content="images/ogimage.png">
     <meta property="og:url" content="http://neecnonso.com">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="images/ogimage.png">
+    <meta name="twitter:title" content="neec nonso | visual artist">
+
 
     <!-- Favicon -->
 
