--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content=" 150 words">
     <meta name="keywords" content="">
     <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="g87Q6hOwJZZ1Yxe63hb3_rBTowrGJAiuULnUolmTzL4" />
 
     <!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
     <meta property="og:title" content="Neec Nonso | Documentary Photographer">
