--- a/index.html
+++ b/index.html
@@ -2,28 +2,38 @@
 <html>
 
 <head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> homepage | neec nonso | visual artist</title>
-    <meta name="description" content=" 150 words">
-    <meta name="keywords" content="">
-    <meta name="robots" content="index, follow">
-    <meta name="google-site-verification" content="g87Q6hOwJZZ1Yxe63hb3_rBTowrGJAiuULnUolmTzL4" />
 
-    <!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
-    <meta property="og:title" content="Neec Nonso | Documentary Photographer">
-    <meta property="og:description" content="Site Content short description">
-    <meta property="og:image" content="http://example.com/thumbnail.jpg">
-    <meta property="og:url" content="http://neecnonso.com">
-    <meta name="twitter:card" content="summary_large_image">
+<!-- Description -->
+<meta name="author" content="www.pixelsinframe.com">
+<meta name="description" content="neec nonso is a nigerian visual artist">
+<meta name="keywords"
+    content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
+<meta name="robots" content="index, follow">
 
-    <link rel="shortcut icon" type="image/png" href="images/icon (1) 06.12.35.png">
+
+<!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
+
+<meta property="og:title" content=" neec nonso | visual artist">
+<meta property="og:description" content="neec nonso is a nigerian visual artist based in lagos, nigeria>
+    <meta property=" og:image" content="images/ogimage.png">
+<meta property="og:url" content="http://neecnonso.com">
+<meta name="twitter:card" content="images/ogimage.png">
+<meta name="twitter:title" content="neec nonso | visual artist">
+
+
+<!-- Favicon -->
+
+<link rel="shortcut icon" type="image/png" href="images/favicon.png">
 
 
     <!-- Style Links -->
 
-    <!-- Gsap Links -->
+
 
 
 
