--- a/page-not-found.html
+++ b/page-not-found.html
@@ -5,11 +5,27 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> page not found | neec nonso | visual artist</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Description -->
+    <meta name="author" content="www.pixelsinframe.com">
+    <meta name="description" content="neec nonso is a nigerian visual artist">
+    <meta name="keywords"
+        content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
+    <meta name="robots" content="index, follow">
 
-    <link rel="shortcut icon" type="image/png" href="images/neec nonso logo.png">
 
+    <!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
+
+    <meta property="og:title" content=" neec nonso | visual artist">
+    <meta property="og:description" content="neec nonso is a nigerian visual artist based in lagos, nigeria>
+        <meta property=" og:image" content="images/ogimage.png">
+    <meta property="og:url" content="http://neecnonso.com">
+    <meta name="twitter:card" content="images/ogimage.png">
+    <meta name="twitter:title" content="neec nonso | visual artist">
+
+
+    <!-- Favicon -->
+
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <!-- Style Links -->
 
     <link rel="stylesheet" href="./css/style.css">
@@ -21,7 +37,7 @@
 <body>
 
     <!-- Back to top button -->
-    
+
     <button onclick="topFunction()" id="myBtn" title="Back to Top">Top</button>
 
     <!-- logo -->
@@ -53,11 +69,11 @@
         <div class="footer-content">
 
 
-        <div class="copyright">
-            <p class="footer-words"> &copy; copyright 2022 neec nonso, <br>
-                all rights reserved.
-            </p>
-        </div>
+            <div class="copyright">
+                <p class="footer-words"> &copy; copyright 2022 neec nonso, <br>
+                    all rights reserved.
+                </p>
+            </div>
 
             <div class="designer">
                 <p class=""> designed by <a href="https://www.scriptsandtags.com/">scriptsandtags</a></p>
@@ -111,29 +127,29 @@
 
     <script>
         //Get the button
-            var mybutton = document.getElementById("myBtn");
+        var mybutton = document.getElementById("myBtn");
 
-            // When the user scrolls down 20px from the top of the document, show the button
-            window.onscroll = function () {
-                scrollFunction();
-            };
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function () {
+            scrollFunction();
+        };
 
-            function scrollFunction() {
-                if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                    mybutton.style.display = "block";
-                } else {
-                    mybutton.style.display = "none";
-                }
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
             }
+        }
 
-            // When the user clicks on the button, scroll to the top of the document
-            function topFunction() {
-                document.body.scrollTop = 0;
-                document.documentElement.scrollTop = 0;
-            }
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
     </script>
 
-   
+
 </body>
 
 </html>
