--- a/page-not-found.html
+++ b/page-not-found.html
@@ -16,8 +16,8 @@
     <!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
 
     <meta property="og:title" content=" neec nonso | visual artist">
-    <meta property="og:description" content="neec nonso is a nigerian visual artist based in lagos, nigeria>
-        <meta property=" og:image" content="images/ogimage.png">
+    <meta property="og:description" content="neec nonso is a nigerian visual artist based in lagos, nigeria">
+    <meta property=" og:image" content="images/ogimage.png">
     <meta property="og:url" content="http://neecnonso.com">
     <meta name="twitter:card" content="images/ogimage.png">
     <meta name="twitter:title" content="neec nonso | visual artist">
