--- a/christmasandclothes.html
+++ b/christmasandclothes.html
@@ -125,7 +125,7 @@
         </p>
         <p class="thelastburial-paragraph">
 
-            christmas and clothes is an ongoing project is a portrait series of kids in omor of
+            christmas and clothes is an ongoing project; a portrait series of kids in omor of
             eastern nigeria,
             wearing their christmas outfits, and holding their christmas toys, with poses resembling movie stars. i am
             reflecting on
