--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/mobile.css">
-    <link rel="stylesheet" href="/css/tablet.css">
+    <link rel="stylesheet" href="./css/tablet.css">
 
 </head>
 
