--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
             <ul class='nav-list'>
 
                 <li class='list-item'>
-                    <a href='bio.html'> bio</a>
+                    <a href='bio'> bio</a>
                 </li>
 
                 <li class='list-item'>
-                    <a href='projects.html'>projects </a>
+                    <a href='projects'>projects </a>
                 </li>
                 <li class='list-item'>
-                    <a href='exhibition.html'>exhibitions </a>
+                    <a href='exhibition'>exhibitions </a>
                 </li>
                 <li class='list-item'>
-                    <a href='contact.html'>contact </a>
+                    <a href='contact'>contact </a>
                 </li>
 
             </ul>
@@ -215,7 +215,7 @@
             .from(".extra", { x: 200, opacity: 0, duration: 1.5 })
             .from(".copyright", { y: 10, opacity: 0, duration: 1.5 })
           //  .from(".designer", { y: 10, opacity: 0, duration: 1.5 });
-          
+
     </script>
 
 
