--- a/projects.html
+++ b/projects.html
@@ -106,6 +106,8 @@
 
     <!-- End of Navbar-->
 
+    <!-- Start of Project-->
+
     <div class="blockquote-div">
         <blockquote>
             in the igbo land, masquerades are embodiments of the spirit and the human worlds. the mystique surrounding
@@ -248,6 +250,8 @@
     </div>
 
     <hr class="bottom-line" color="#800020" width="60%">
+
+    <!-- End of Project-->
 
     <!-- Start of Footer -->
 
