--- a/pain-a-discomfort-or-a-trigger.html
+++ b/pain-a-discomfort-or-a-trigger.html
@@ -155,23 +155,23 @@
 
                     <li class="carousel-slide current-slide"><img class="carousel-image potrait"
                             src="images/pain a discomfort/1.webp" alt="pain-a-discomfort-or-a-trigger-1"></li>
-                    <li class="carousel-slide potrait"><img class="carousel-image" src="images/pain a discomfort/2.webp"
+                    <li class="carousel-slide "><img class="carousel-image potrait" src="images/pain a discomfort/2.webp"
                             alt="pain-a-discomfort-or-a-trigger-2"></li>
-                    <li class="carousel-slide potrait"><img class="carousel-image" src="images/pain a discomfort/3.webp"
+                    <li class="carousel-slide "><img class="carousel-image potrait" src="images/pain a discomfort/3.webp"
                             alt="pain-a-discomfort-or-a-trigger-3"></li>
-                    <li class="carousel-slide potrait"><img class="carousel-image" src="images/pain a discomfort/4.webp"
+                    <li class="carousel-slide "><img class="carousel-image potrait" src="images/pain a discomfort/4.webp"
                             alt="pain-a-discomfort-or-a-trigger-4"></li>
-                    <li class="carousel-slide potrait"><img class="carousel-image potrait" src="images/pain a discomfort/5.webp"
+                    <li class="carousel-slide "><img class="carousel-image potrait" src="images/pain a discomfort/5.webp"
                             alt="pain-a-discomfort-or-a-trigger-5"></li>
-                    <li class="carousel-slide potrait"><img class="carousel-image" src="images/pain a discomfort/6.webp"
+                    <li class="carousel-slide "><img class="carousel-image potrait" src="images/pain a discomfort/6.webp"
                             alt="pain-a-discomfort-or-a-trigger-6"></li>
-                    <li class="carousel-slide potrait"><img class="carousel-image" src="images/pain a discomfort/7.webp"
+                    <li class="carousel-slide "><img class="carousel-image potrait" src="images/pain a discomfort/7.webp"
                             alt="pain-a-discomfort-or-a-trigger-7"></li>
-                    <li class="carousel-slide potrait"><img class="carousel-image" src="images/pain a discomfort/8.webp"
+                    <li class="carousel-slide "><img class="carousel-image potrait" src="images/pain a discomfort/8.webp"
                             alt="pain-a-discomfort-or-a-trigger-8"></li>
-                    <li class="carousel-slide potrait"><img class="carousel-image" src="images/pain a discomfort/9.webp"
+                    <li class="carousel-slide "><img class="carousel-image potrait" src="images/pain a discomfort/9.webp"
                             alt="pain-a-discomfort-or-a-trigger-9"></li>
-                    <li class="carousel-slide potrait"><img class="carousel-image" src="images/pain a discomfort/10.webp"
+                    <li class="carousel-slide "><img class="carousel-image potrait" src="images/pain a discomfort/10.webp"
                             alt="pain-a-discomfort-or-a-trigger-10"></li>
                    
 
