--- a/howtophotographylagostwo.html
+++ b/howtophotographylagostwo.html
@@ -155,23 +155,9 @@
 
                 <ul class="carousel-track">
                     <li class="carousel-slide current-slide"><img class="carousel-image square"
-                            src="images/howtophotographylagos/square/1.webp" alt="howtophotographylagos" loading="">
+                            src="images/howtophotographylagos/square/neec.nonso--2.jpg" alt="howtophotographylagos" loading="">
                     </li>
-                    <li class="carousel-slide current-slide"><img class="carousel-image square"
-                            src="images/howtophotographylagos/square/2.webp" alt="howtophotographylagos" loading="">
-                    </li>
-                    <li class="carousel-slide current-slide"><img class="carousel-image square"
-                            src="images/howtophotographylagos/square/3.webp" alt="howtophotographylagos" loading="">
-                    </li>
-                    <li class="carousel-slide current-slide"><img class="carousel-image square"
-                            src="images/howtophotographylagos/square/4.webp" alt="howtophotographylagos" loading="">
-                    </li>
-                    <li class="carousel-slide current-slide"><img class="carousel-image square"
-                            src="images/howtophotographylagos/square/5.webp" alt="howtophotographylagos" loading="">
-                    </li>
-                    <li class="carousel-slide current-slide"><img class="carousel-image square"
-                            src="images/howtophotographylagos/square/6.webp" alt="howtophotographylagos" loading="">
-                    </li>
+                 
 
                 </ul>
 
