--- a/howtophotographylagostwo.html
+++ b/howtophotographylagostwo.html
@@ -145,16 +145,37 @@
 
     <div class="main-exhibition">
 
-        <div class="carousel square">
+        <div class="" id="carousel-square">
 
             <button class="carousel-button carousel--button-left is-hidden">
                 <img src="images/arrow-back-circle.svg" alt="arrow-back-circle">
             </button>
 
-            <div class="carousel-track-container">
+            <div class="carousel-track-container" id="carousel-track-container">
 
                 <ul class="carousel-track">
                     <li class="carousel-slide current-slide"><img class="carousel-image square"
+                            src="images/howtophotographylagos/square/neec.nonso--2.jpg" alt="howtophotographylagos" loading="">
+                    </li>
+                    <li class="carousel-slide"><img class="carousel-image square"
+                            src="images/howtophotographylagos/square/neec.nonso--2.jpg" alt="howtophotographylagos" loading="">
+                    </li>
+                    <li class="carousel-slide"><img class="carousel-image square"
+                            src="images/howtophotographylagos/square/neec.nonso--2.jpg" alt="howtophotographylagos" loading="">
+                    </li>
+                    <li class="carousel-slide"><img class="carousel-image square"
+                            src="images/howtophotographylagos/square/neec.nonso--2.jpg" alt="howtophotographylagos" loading="">
+                    </li>
+                    <li class="carousel-slide"><img class="carousel-image square"
+                            src="images/howtophotographylagos/square/neec.nonso--2.jpg" alt="howtophotographylagos" loading="">
+                    </li>
+                    <li class="carousel-slide"><img class="carousel-image square"
+                            src="images/howtophotographylagos/square/neec.nonso--2.jpg" alt="howtophotographylagos" loading="">
+                    </li>
+                    <li class="carousel-slide"><img class="carousel-image square"
+                            src="images/howtophotographylagos/square/neec.nonso--2.jpg" alt="howtophotographylagos" loading="">
+                    </li>
+                    <li class="carousel-slide"><img class="carousel-image square"
                             src="images/howtophotographylagos/square/neec.nonso--2.jpg" alt="howtophotographylagos" loading="">
                     </li>
                  
