--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div>
 
         <nav class='navbar'>
-            <a class="logo-link" href='index.html'>
+            <a class="logo-link" href='index'>
                 <img src="images/neec nonso logo.png" class='App-logo' alt='logo' />
             </a>
 
