--- a/whatwasdeadwasneverdead.html
+++ b/whatwasdeadwasneverdead.html
@@ -50,7 +50,7 @@
 
         <nav class='navbar'>
 
-            <a class="logo-link" href='index.html'>
+            <a class="logo-link" href='index'>
                 <img src="images/neec nonso logo.png" class='App-logo' alt='logo' />
             </a>
 
@@ -226,15 +226,6 @@
                     all rights reserved.
                 </p>
             </div>
-
-            <!-- 
-
-            <div class="designer">
-                <p class=""> Designed by <a rel='noreferrer noopener' target="_blank"
-                        href="https://www.scriptsandtags.com/">ScriptsandTags</a></p>
-            </div>
--->
-
 
         </div>
 
