--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
     
         <nav class='navbar'>
     
-            <a class="logo-link" href='index.html'>
+            <a class="logo-link" href='index'>
                 <img src="images/neec nonso logo.png" class='App-logo' alt='logo' />
             </a>
             <ul class='nav-list'>
