--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
 
         <nav class='navbar'>
 
-    <a class="logo-link" href='index.html'>
+    <a class="logo-link" href='index'>
         <img src="images/neec nonso logo.png" class='App-logo' alt='logo' />
     </a>
 
