--- a/theanotherbeginning.html
+++ b/theanotherbeginning.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html  lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -79,22 +79,22 @@
         
             <li class='list-item extra'>
                 <a rel='noreferrer noopener' target='_blank' href='https://www.instagram.com/neecnonso/'>
-                    <img width="40px" src="images/logo-instagram.svg" alt='logo' />
+                    <img class="extra-icon-image" src="images/logo-instagram.svg" alt='extra-icon-image' />
                 </a>
             </li>
             <li class='list-item extra'>
                 <a rel='noreferrer noopener' target='_blank' href='https://web.facebook.com/neecnonso/'>
-                    <img width="40px" src="images/logo-facebook.svg" alt='logo' />
+                    <img class="extra-icon-image" src="images/logo-facebook.svg" alt='extra-icon-image' />
                 </a>
             </li>
             <li class='list-item extra'>
                 <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                    <img width="40px" src="images/logo-linkedin.svg" alt='logo' />
+                    <img class="extra-icon-image" src="images/logo-linkedin.svg" alt='extra-icon-image' />
                 </a>
             </li>
             <li class='list-item extra'>
                 <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-                    <img width="40px" src="images/logo-twitter.svg" alt='logo' />
+                    <img class="extra-icon-image" src="images/logo-twitter.svg" alt='extra-icon-image' />
                 </a>
             </li>
         
