--- a/howtophotographylagostwo.html
+++ b/howtophotographylagostwo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html  lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -75,31 +75,30 @@
             </div>
 
         </nav>
+<ul class='extra'>
 
-        <ul class='extra'>
+    <li class='list-item extra'>
+        <a rel='noreferrer noopener' target='_blank' href='https://www.instagram.com/neecnonso/'>
+            <img class="extra-icon-image" src="images/logo-instagram.svg" alt='extra-icon-image' />
+        </a>
+    </li>
+    <li class='list-item extra'>
+        <a rel='noreferrer noopener' target='_blank' href='https://web.facebook.com/neecnonso/'>
+            <img class="extra-icon-image" src="images/logo-facebook.svg" alt='extra-icon-image' />
+        </a>
+    </li>
+    <li class='list-item extra'>
+        <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
+            <img class="extra-icon-image" src="images/logo-linkedin.svg" alt='extra-icon-image' />
+        </a>
+    </li>
+    <li class='list-item extra'>
+        <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
+            <img class="extra-icon-image" src="images/logo-twitter.svg" alt='extra-icon-image' />
+        </a>
+    </li>
 
-            <li class='list-item extra'>
-                <a rel='noreferrer noopener' target='_blank' href='https://www.instagram.com/neecnonso/'>
-                    <img width="40px" src="images/logo-instagram.svg" alt='logo' />
-                </a>
-            </li>
-            <li class='list-item extra'>
-                <a rel='noreferrer noopener' target='_blank' href='https://web.facebook.com/neecnonso/'>
-                    <img width="40px" src="images/logo-facebook.svg" alt='logo' />
-                </a>
-            </li>
-            <li class='list-item extra'>
-                <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                    <img width="40px" src="images/logo-linkedin.svg" alt='logo' />
-                </a>
-            </li>
-            <li class='list-item extra'>
-                <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-                    <img width="40px" src="images/logo-twitter.svg" alt='logo' />
-                </a>
-            </li>
-
-        </ul>
+</ul>
 
 
     </div>
@@ -145,7 +144,7 @@
 
     <div class="main-exhibition square">
 
-        <div class="" id="carousel-square">
+        <div class="carousel" id="carousel-square">
 
             <button class="carousel-button carousel--button-left is-hidden">
                 <img src="images/arrow-back-circle.svg" alt="arrow-back-circle">
