--- a/toiletintoiletout.html
+++ b/toiletintoiletout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html  lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -79,29 +79,29 @@
         </nav>
 
         <ul class='extra'>
+        
             <li class='list-item extra'>
-                <a rel='noreferrer noopener' target='_blank' href=''>
-                    <img width="40px" src="images/logo-instagram.svg" alt='logo' />
+                <a rel='noreferrer noopener' target='_blank' href='https://www.instagram.com/neecnonso/'>
+                    <img class="extra-icon-image" src="images/logo-instagram.svg" alt='extra-icon-image' />
                 </a>
             </li>
             <li class='list-item extra'>
-                <a rel='noreferrer noopener' target='_blank' href=''>
-                    <img width="40px" src="images/logo-facebook.svg" alt='logo' />
+                <a rel='noreferrer noopener' target='_blank' href='https://web.facebook.com/neecnonso/'>
+                    <img class="extra-icon-image" src="images/logo-facebook.svg" alt='extra-icon-image' />
                 </a>
             </li>
             <li class='list-item extra'>
-                <a rel='noreferrer noopener' target='_blank' href=''>
-                    <img width="40px" src="images/logo-linkedin.svg" alt='logo' />
+                <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
+                    <img class="extra-icon-image" src="images/logo-linkedin.svg" alt='extra-icon-image' />
                 </a>
             </li>
             <li class='list-item extra'>
                 <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-                    <img width="40px" src="images/logo-twitter.svg" alt='logo' />
+                    <img class="extra-icon-image" src="images/logo-twitter.svg" alt='extra-icon-image' />
                 </a>
             </li>
-
+        
         </ul>
-
     </div>
 
     <!-- End of Navbar-->
