--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 
     <!-- Style Links -->
 
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/mobile.css">
-    <link rel="stylesheet" href="/css/tablet.css">
+    <link rel="stylesheet" href="minify.css">
+
 
 
 </head>
