--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,7 @@
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
 
 
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/mobile.css">
-    <link rel="stylesheet" href="./css/tablet.css">
+<link rel="stylesheet" href="minify.css">
 
 
 </head>
