--- a/pain-a-discomfort-or-a-trigger.html
+++ b/pain-a-discomfort-or-a-trigger.html
@@ -30,9 +30,7 @@
 
     <!-- Style Links -->
 
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/mobile.css">
-    <link rel="stylesheet" href="./css/tablet.css">
+<link rel="stylesheet" href="minify.css">
 
 </head>
 
