--- a/toiletintoiletout.html
+++ b/toiletintoiletout.html
@@ -31,9 +31,7 @@
 
     <!-- Style Links -->
 
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/mobile.css">
-    <link rel="stylesheet" href="./css/tablet.css">
+    <link rel="stylesheet" href="minify.css">
 
 </head>
 
