--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
     <!-- Style Links -->
 
     <link rel="stylesheet" href="minify.css">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WKWYR7YG7F"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
+    gtag('config', 'G-WKWYR7YG7F');
+</script>
 
 
 </head>
