--- a/page-not-found.html
+++ b/page-not-found.html
@@ -55,7 +55,7 @@
     <!-- Error Container -->
 
     <div class="error-container">
-        <p class="error-page-title"> page not found</p>
+        <p class="error-page-title"> 404 and corrupted memory card <br> page not found </p>
         <img class="errorimage" src="images/404.svg" alt="">
         <a class="css-button-arrow--black " href="index.html"> return home</a>
     </div>
