--- a/toiletintoiletout.html
+++ b/toiletintoiletout.html
@@ -31,8 +31,8 @@
 
     <!-- Style Links -->
 
-    <link rel="stylesheet" href="minify.css">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="m">
+    <link rel="stylesheet" href="css/mobile.css">
 
 </head>
 
