--- a/projects/thelastburial.html
+++ b/projects/thelastburial.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
-<html  lang="en">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>the last burial | neec nonso |visual artist</title>
-    <!-- Description -->
-    <meta name="author" content="www.pixelsinframe.com">
-    <meta name="description" content="neec nonso is a nigerian visual artist">
-    <meta name="keywords"
-        content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
-    <meta name="robots" content="index, follow">
+<!-- Favicon -->
+<link rel="shortcut icon" type="image/png" href="../images/favicon.png">
+
+<meta name="robots" content="index, follow">
+<meta name="description" content="neec nonso is a nigerian visual artist">
+<meta name="keywords"
+    content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
 
 
-    <!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
+<!-- Open Graph Meta Tags -->
 
-    <meta property="og:title" content=" neec nonso | visual artist">
-    <meta property="og:description" content="neec nonso is a nigerian visual artist based in lagos, nigeria">
-    <meta property=" og:image" content="images/ogimage.png">
-    <meta property="og:url" content="http://neecnonso.com">
-    <meta name="twitter:card" content="images/ogimage.png">
-    <meta name="twitter:title" content="neec nonso | visual artist">
-
-
-    <!-- Favicon -->
-
-    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+<meta property="og:type" content="article" />
+<meta property="og:title" content="homepage | neec nonso | visual artist">
+<meta property="og:description" content="neec nonso is a nigerian visual artist">
+<meta property="og:url" content="http://neecnonso.com" />
+<meta property="og:image" content="../images/ogimage.png" />
 
 
-    <!-- Style Links -->
+<!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
 
-<link rel="stylesheet" href="minify.css">
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:site" content="@neecnonso" />
+<meta name="twitter:title" content="neec nonso | visual artist">
+<meta property="og:description" content="neec nonso is a nigerian visual artist based in lagos,nigeria">
+<meta name="twitter:image" content="../images/ogimage.png" />
+    <!-- Style Links 
+
+    <link rel="stylesheet" href="minify.css"> 
+-->
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
@@ -40,33 +44,34 @@
     <button onclick="topFunction()" id="myBtn" title="Back to Top">Top</button>
 
     <!--- Start of Navbar -->
-
     <div>
 
         <nav class='navbar'>
 
-            <a class="logo-link" href='index'>
-                <img src="images/neec nonso logo.png" class='App-logo' alt='logo' />
+            <a class="logo-link" href='/'>
+                <img src="../images/neec nonso logo.png" class='App-logo' alt='logo' />
             </a>
 
             <ul class='nav-list'>
 
                 <li class='list-item'>
-                    <a href='bio'> bio</a>
+                    <a href='../bio'> bio</a>
                 </li>
 
                 <li class='list-item'>
-                    <a href='projects'>projects </a>
+                    <a href='../projects'>projects </a>
                 </li>
                 <li class='list-item'>
-                    <a href='exhibition'>exhibitions </a>
+                    <a href='../video'>video </a>
                 </li>
                 <li class='list-item'>
-                    <a href='contact'>contact </a>
+                    <a href='../exhibition'>exhibitions </a>
+                </li>
+                <li class='list-item'>
+                    <a href='../contact'>contact </a>
                 </li>
 
             </ul>
-
 
             <div class="menu">
                 <div class="menu-line1"></div>
@@ -76,30 +81,30 @@
 
         </nav>
 
-<ul class='extra'>
+        <ul class='extra'>
 
-    <li class='list-item extra'>
-        <a rel='noreferrer noopener' target='_blank' href='https://www.instagram.com/neecnonso/'>
-            <img class="extra-icon-image" src="images/logo-instagram.svg" alt='extra-icon-image' />
-        </a>
-    </li>
-    <li class='list-item extra'>
-        <a rel='noreferrer noopener' target='_blank' href='https://web.facebook.com/neecnonso/'>
-            <img class="extra-icon-image" src="images/logo-facebook.svg" alt='extra-icon-image' />
-        </a>
-    </li>
-    <li class='list-item extra'>
-        <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-            <img class="extra-icon-image" src="images/logo-linkedin.svg" alt='extra-icon-image' />
-        </a>
-    </li>
-    <li class='list-item extra'>
-        <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-            <img class="extra-icon-image" src="images/logo-twitter.svg" alt='extra-icon-image' />
-        </a>
-    </li>
+            <li class='list-item extra'>
+                <a rel='noreferrer noopener' target='_blank' href='https://www.instagram.com/neecnonso/'>
+                    <img class="extra-icon-image" src="../images/logo-instagram.svg" alt='extra-icon-image' />
+                </a>
+            </li>
+            <li class='list-item extra'>
+                <a rel='noreferrer noopener' target='_blank' href='https://web.facebook.com/neecnonso/'>
+                    <img class="extra-icon-image" src="../images/logo-facebook.svg" alt='extra-icon-image' />
+                </a>
+            </li>
+            <li class='list-item extra'>
+                <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
+                    <img class="extra-icon-image" src="../images/logo-linkedin.svg" alt='extra-icon-image' />
+                </a>
+            </li>
+            <li class='list-item extra'>
+                <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
+                    <img class="extra-icon-image" src="../images/logo-twitter.svg" alt='extra-icon-image' />
+                </a>
+            </li>
 
-</ul>
+        </ul>
 
     </div>
 
@@ -137,24 +142,24 @@
         <div class="carousel">
 
             <button class="carousel-button carousel--button-left is-hidden">
-                <img src="images/arrow-back-circle.svg" alt="">
+                <img src="../images/arrow-back-circle.svg" alt="">
             </button>
 
             <div class="carousel-track-container">
 
                 <ul class="carousel-track">
                     <li class="carousel-slide current-slide"><img class="carousel-image"
-                            src="images/the last burial/tinified/1.webp" alt=" thelastburial" loading="lazy"></li>
-                    <li class="carousel-slide"><img class="carousel-image" src="images/the last burial/tinified/2.webp"
-                            alt=" thelastburial" loading="lazy"></li>
-                    <li class="carousel-slide"><img class="carousel-image" src="images/the last burial/tinified/3.webp"
-                            alt="thelastburial" loading="lazy"></li>
+                            src="../images/the last burial/tinified/1.webp" alt=" thelastburial" loading="lazy"></li>
+                    <li class="carousel-slide"><img class="carousel-image"
+                            src="../images/the last burial/tinified/2.webp" alt=" thelastburial" loading="lazy"></li>
+                    <li class="carousel-slide"><img class="carousel-image"
+                            src="../images/the last burial/tinified/3.webp" alt="thelastburial" loading="lazy"></li>
                 </ul>
 
             </div>
 
             <button class="carousel-button carousel--button-right">
-                <img src="images/arrow-forward-circle.svg" alt="">
+                <img src="../images/arrow-forward-circle.svg" alt="">
             </button>
 
             <div class="carousel-nav">
@@ -170,9 +175,9 @@
 
     <div class="mobile">
 
-        <img class="carousel-image" src="images/the last burial/Mobile/1.webp" alt="thelastburial mobile">
-        <img class="carousel-image" src="images/the last burial/Mobile/2.webp" alt="thelastburial mobile">
-        <img class="carousel-image" src="images/the last burial/Mobile/3.webp" alt="thelastburial mobile">
+        <img class="carousel-image" src="../images/the last burial/Mobile/1.webp" alt="thelastburial mobile">
+        <img class="carousel-image" src="../images/the last burial/Mobile/2.webp" alt="thelastburial mobile">
+        <img class="carousel-image" src="../images/the last burial/Mobile/3.webp" alt="thelastburial mobile">
 
     </div>
 
@@ -184,21 +189,11 @@
 
         <div class="footer-content">
 
-
             <div class="copyright">
                 <p class="footer-words"> &copy; copyright 2022 neec nonso, <br>
                     all rights reserved.
                 </p>
             </div>
-
-            <!-- 
-    
-            <div class="designer">
-                <p class=""> Designed by <a rel='noreferrer noopener' target="_blank"
-                        href="https://www.scriptsandtags.com/">ScriptsandTags</a></p>
-            </div>
-    
-    -->
 
         </div>
 
@@ -270,8 +265,8 @@
             .from(".designer", { y: 10, opacity: 0, duration: 1.5 });
 
     </script>
-    <script src="projects.js" async defer></script>
-    <script src="script.js" async defer></script>
+    <script src="../projects.js" async defer></script>
+    <script src="../script.js" async defer></script>
     <!-- <script src="countdown.js" async defer></script> -->
 </body>
 
