--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <link rel="shortcut icon" type="image/png" href="images/favicon.png">
 
 <meta name="robots" content="index, follow">
-<meta name="description" content="neec nonso is a nigerian visual artist">
+<meta name="description" content="neec nonso is a young, vibrant and self-taught visual artist who is making waves in the contemporary african art scene. he captures everyday life and its nuances in communities across nigeria">
 <meta name="keywords"
     content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
 
@@ -118,9 +118,11 @@
 
         <div class="contact-main">
 
+           
+
             <div class="contact">
+                <h1 class="contact-title">contact</h1>
                 <p>
-                    <span>contact</span><br> <br>
                     <span class="namename">neec nonso</span><br>
                     lagos,<br> nigeria<br> <br>
                     <a class="email-contact" href="mailto:neecnonso@gmail.com">
