--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     
     <meta name="robots" content="index, follow">
-    <meta name="description" content="neec nonso is a nigerian visual artist">
+    <meta name="description" content="neec nonso is a nigerian visual artistneec nonso is a nigerian visual artist. he was born in aguleri, anambra state. he captures everyday life and its nuances in communities across nigeria. he works predominantly with photography and aims to inspire conversations">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
     
@@ -112,9 +112,9 @@
 
     <div class="blockquote-div">
         <blockquote>
-            <p class="blockquote">
+            <h1 class="blockquote">
 
-            </p>
+            </h1>
         </blockquote>
         <br>
         <div class="blockquote-footer">
@@ -149,10 +149,10 @@
         </div>
 
         <div class="card">
-            <a href="whatwasdeadwasneverdead">
+            <a href="./projects/whatwasdeadwasneverdead.html">
                 <img class="card-image" src="images/what was dead was never dead/Mobile/1.webp" alt="projects-image">
             </a>
-            <a class="card-description" href="whatwasdeadwasneverdead">
+            <a class="card-description" href="./projects/whatwasdeadwasneverdead.html">
                 <p class="project-title">what was dead was never dead.</p>
             </a>
         </div>
