--- a/exhibition.html
+++ b/exhibition.html
@@ -9,7 +9,7 @@
 
     <!-- Description -->
     <meta name="author" content="www.pixelsinframe.com">
-    <meta name="description" content="neec nonso is a nigerian visual artist">
+    <meta name="description" content="neec nonso is a young, vibrant and self-taught visual artist who is making waves in the contemporary african art scene. he captures everyday life and its nuances in communities across nigeria">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
     <meta name="robots" content="index, follow">
