--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
                     </a> <br> <br> <br>
 
                 </p>
-                <p>gallery</p>
+                <p class="contact-title">gallery</p>
                 <p class="email-contact">rele gallery</p>
                 <p>32 thompson avenue ikoyi, <br>lagos, <br> nigeria.</p>
                 <a rel='noreferrer noopener' target='_blank' class="email-contact" href="https://www.rele.co/">www.rele.co</a>
