--- a/exhibition.html
+++ b/exhibition.html
@@ -7,27 +7,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> exhibition | neec nonso | visual artist</title>
 
-    <!-- Description -->
-    <meta name="author" content="www.pixelsinframe.com">
-    <meta name="description" content="neec nonso is a young, vibrant and self-taught visual artist who is making waves in the contemporary african art scene. he captures everyday life and its nuances in communities across nigeria">
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+
+    <meta name="robots" content="index, follow">
+    <meta name="description"
+        content="neec nonso is a nigerian visual artistneec nonso is a nigerian visual artist. he was born in aguleri, anambra state. ">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
-    <meta name="robots" content="index, follow">
+
+
+    <!-- Open Graph Meta Tags -->
+
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="homepage | neec nonso | visual artist">
+    <meta property="og:description" content="neec nonso is a nigerian visual artist">
+    <meta property="og:url" content="http://neecnonso.com" />
+    <meta property="og:image" content="images/ogimage.png" />
 
 
     <!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
 
-    <meta property="og:title" content=" neec nonso | visual artist">
-    <meta property="og:description" content="neec nonso is a nigerian visual artist based in lagos, nigeria">
-    <meta property=" og:image" content="images/ogimage.png">
-    <meta property="og:url" content="http://neecnonso.com">
-    <meta name="twitter:card" content="images/ogimage.png">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@neecnonso" />
     <meta name="twitter:title" content="neec nonso | visual artist">
-
-
-    <!-- Favicon -->
-
-    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+    <meta property="og:description" content="neec nonso is a nigerian visual artist based in lagos,nigeria">
+    <meta name="twitter:image" content="images/ogimage.png" />
 
     <!-- Style Links 
     
@@ -141,7 +146,8 @@
                 <p class="exhibition-year">2021</p>
 
                 <div class="exhibitions">
-                    <p class="exhibition-title"><a href="./exhibitions/taste-mystique"> taste:mystique <br> smithsonian </a>
+                    <p class="exhibition-title"><a href="./exhibitions/taste-mystique"> taste:mystique <br> smithsonian
+                        </a>
                     </p>
                     <p class="exhibition-venue">lagos photo festival,</p>
                     <p class="exhibition-location">lagos,nigeria</p>
