--- a/exhibitions/agathering.html
+++ b/exhibitions/agathering.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="../images/favicon.png">
     
     <meta name="robots" content="index, follow">
-    <meta name="description" content="neec nonso is a nigerian visual artist. he was born in aguleri, anambra state. he captures everyday life and its nuances in communities across nigeria. he works predominantly with photography and aims to inspire conversations">
+    <meta name="description" content="neec nonso captures everyday life and its nuances in communities across nigeria. he works predominantly with photography and aims to inspire conversations">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
     
