--- a/exhibitions/wanawari.html
+++ b/exhibitions/wanawari.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="../images/favicon.png">
     
     <meta name="robots" content="index, follow">
-    <meta name="description" content="neec nonso is a nigerian visual artist. he was born in aguleri, anambra state. he captures everyday life and its nuances in communities across nigeria. he works predominantly with photography and aims to inspire conversations">
+    <meta name="description" content="he captures everyday life and its nuances in communities across nigeria. he works predominantly with photography and aims to inspire conversations">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
     
@@ -120,7 +120,7 @@
 
         <div class="exhibition-intro-title">
             <div>
-                <p class="exhibition-title"><a href="./exhibitions/taste-mystique"> taste:mystique,smithsonian </a>
+                <p class="exhibition-title"><a href="taste-mystique"> taste:mystique,smithsonian </a>
                 </p>
                 <p class="exhibition-venue">lagos photo festival,</p>
                 <p class="exhibition-location">lagos,nigeria</p>
