--- a/exhibition.html
+++ b/exhibition.html
@@ -172,7 +172,7 @@
                 </div>
 
                 <div class="exhibitions">
-                    <p class="exhibition-title"><a href="./exhibitions/youngphotographers.html">young photographers</a>
+                    <p class="exhibition-title"><a href="./exhibitions/youngphotographer">young photographers</a>
                     </p>
                     <p class="exhibition-venue">alliance francaise,</p>
                     <p class="exhibition-location">lagos,nigeria</p>
@@ -193,7 +193,7 @@
                 <p class="exhibition-year">2020</p>
 
                 <div class="exhibitions">
-                    <p class="exhibition-title"> <a href="./exhibitions/nigeria-trending-lagos-fringe.html">nigeria
+                    <p class="exhibition-title"> <a href="./exhibitions/nigeria-trending-lagos-fringe">nigeria
                             trending,<br>
                             lagos fringe</a> </p>
 
