--- a/index.html
+++ b/index.html
@@ -48,8 +48,6 @@
 
     <link rel="stylesheet" href="./css/style.css">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <meta name="google-site-verification" content="g87Q6hOwJZZ1Yxe63hb3_rBTowrGJAiuULnUolmTzL4" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WKWYR7YG7F"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -139,7 +137,7 @@
 
     <main class="index-main">
         <div class="landing-page mobile">
-            <a href="projects.html"><img src="images/the boys fraternity/8.webp" alt="homepage-image-mobile"></a>
+            <a href="projects"><img src="images/the boys fraternity/8.webp" alt="homepage-image-mobile"></a>
         </div>
 
         <div class="landing-page">
