--- a/projects.html
+++ b/projects.html
@@ -149,10 +149,10 @@
         </div>
 
         <div class="card">
-            <a href="./projects/whatwasdeadwasneverdead.html">
+            <a href="./projects/whatwasdeadwasneverdead">
                 <img class="card-image" src="images/what was dead was never dead/Mobile/1.webp" alt="projects-image">
             </a>
-            <a class="card-description" href="./projects/whatwasdeadwasneverdead.html">
+            <a class="card-description" href="./projects/whatwasdeadwasneverdead">
                 <p class="project-title">what was dead was never dead.</p>
             </a>
         </div>
@@ -196,10 +196,10 @@
         </div>
 
         <div class="card bottom">
-            <a href="./projects/toiletintoiletout.html">
+            <a href="./projects/toiletintoiletout">
                 <img class="card-image" src="images/toilet in, toilet out/Mobile/2.webp" alt="projects-image">
             </a>
-            <a class="card-description" href="./projects/toiletintoiletout.html">
+            <a class="card-description" href="./projects/toiletintoiletout">
                 <p class="project-title">toilet in, toilet out.</p>
             </a>
         </div>
