--- a/exhibition.html
+++ b/exhibition.html
@@ -228,7 +228,7 @@
                 </div>
 
                 <div class="exhibitions">
-                    <p class="exhibition-title"><a href="./exhibitions/afrofutures.html">afro futures.</a></p>
+                    <p class="exhibition-title"><a href="./exhibitions/afrofutures">afro futures.</a></p>
                     <p class="exhibition-venue">kungstgewerber museum,</p>
                     <p class="exhibition-location">berlin,germany.</p>
                     <hr class="" color="#800020">
