--- a/projects/howtophotographylagos.html
+++ b/projects/howtophotographylagos.html
@@ -13,7 +13,7 @@
 
     <meta name="robots" content="index, follow">
     <meta name="description"
-        content="neec nonso is a nigerian visual artist. he was born in aguleri, anambra state. he captures everyday life and its nuances in communities across nigeria. he works predominantly with photography and aims to inspire conversations">
+        content="neec nonso is a nigerian visual artist. he captures everyday lifein communities across nigeria. he works predominantly with photography and aims to inspire conversations">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
 
