--- a/index.html
+++ b/index.html
@@ -35,18 +35,12 @@
     <meta name="twitter:image" content="images/ogimage.png" />
 
 
-
-
-
-
-
-
-
     <!-- Style Links 
 
     <link rel="stylesheet" href="minify.css"> -->
 
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/mobile.css">
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WKWYR7YG7F"></script>
     <script>
@@ -137,7 +131,9 @@
 
     <main class="index-main">
         <div class="landing-page mobile">
-            <a href="projects"><img src="images/the boys fraternity/8.webp" alt="homepage-image-mobile"></a>
+            <a href="projects">
+                <img class="mobile-homepage" src="images/the boys fraternity/8.webp" alt="homepage-image-mobile">
+            </a>
         </div>
 
         <div class="landing-page">
@@ -232,7 +228,7 @@
             .from(".App-logo", { y: -200, opacity: 0.5, duration: 1.5 })
             .from(".extra", { x: 200, opacity: 0, duration: 1.5 })
             .from(".copyright", { y: 10, opacity: 0, duration: 1.5 })
-          //  .from(".designer", { y: 10, opacity: 0, duration: 1.5 });
+          
     </script>
 
     <script src="script.js" async defer></script>
