--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,8 @@
 
     <!-- Style Links -->
 
-    <link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/mobile.css">
 
 </head>
 
