--- a/projects/howtophotographylagos.html
+++ b/projects/howtophotographylagos.html
@@ -40,6 +40,7 @@
         <link rel="stylesheet" href="minify.css"> 
     -->
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/mobile.css">
 
 </head>
 
@@ -116,6 +117,10 @@
     <!-- End of Navbar-->
 
     <!-- Main -->
+
+    <main class="projects-each">
+
+
 
     <div class="boy-fraternity-div">
         <h1 class="boy-fraternity-title">how to photograph lagos.</h1>
@@ -235,6 +240,8 @@
 
 
     </div>
+
+        </main>
 
     <!-- End of Main -->
     <!-- Start of Footer -->
