--- a/projects/howtophotographylagostwo.html
+++ b/projects/howtophotographylagostwo.html
@@ -39,6 +39,7 @@
         <link rel="stylesheet" href="minify.css"> 
     -->
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/mobile.css">
 
 </head>
 
@@ -115,6 +116,8 @@
     <!-- End of Navbar-->
 
     <!-- Main -->
+
+        <main class="projects-each">
 
     <div class="boy-fraternity-div">
         <h1 class="boy-fraternity-title">how to photograph lagos 2</h1>
@@ -226,6 +229,7 @@
 
     </div>
 
+    </main>
     <!-- End of Main -->
 
 
